<resources>
    <string name="app_name">Grade Tracker</string>
    <string name="format_semester">Year %1$d Semester %2$d</string>
    <string name="format_semester_short">Y%1$dS%2$d</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="label_your_journey">Your Journey</string>
    <string name="label_modules">Modules</string>
    <string name="label_targets">Targets</string>
    <string name="label_cumulative_gpa">CUMULATIVE\nGPA</string>
    <string name="label_recommended_targets">Recommended Targets</string>
    <string name="pref_title_select_current_semester">Change Current Semester</string>
    <string name="pref_dialog_title_select_current_semester">Choose Semester</string>
    <string name="action_export_google_drive">Export to Google Drive</string>
    <string name="action_import_google_drive">Import from Google Drive</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_google_drive">Google Drive</string>
    <string name="action_autofill">Set Target GPA</string>
    <string name="action_view">View</string>
    <string name="label_create_new_assignment">Create new assignment</string>
    <string name="label_create_new_assignment_subtitle">Add a new assignment to this semester</string>
    <string name="action_create">Create</string>
    <string name="action_navigate_targets">Swipe left to view targets</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="label_cgpa">CGPA</string>
    <string name="format_chart_target">Target: %1$.2f</string>
    <string name="action_quote">Quote</string>
    <string name="format_score_out_of_maxScore">%1$s OUT OF %2$s</string>
    <string name="title_activity_view_module">View Module</string>
    <string name="title_activity_view_assignment">View Assignment</string>
    <string name="title_activity_add_module">Add Module</string>
    <string name="title_activity_add_assignment">Add Assignment</string>
    <string name="format_assignment_statistic_changed">This assignment caused your grade to %1$s from %2$s to %3$s. (%4$.2f CGPA)</string>
    <string name="format_assignment_statistic_unchanged">This assignment did not make a difference to your grades.</string>
    <string name="placeholder_drop">drop</string>
    <string name="placeholder_rise">rise</string>
</resources>
